<resources>
    <string name="app_name">Android Testing</string>

    <!-- App Config -->
    <string name="default_accounts_file_name">accounts.json</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dialog_title_signup_successful">Signup successful!</string>
    <string name="dialog_message_signup_successful">You\'ll receive a verification email shortly.</string>
    <string name="dialog_title_signup_failed">Sign up failed</string>
    <string name="dialog_message_signup_failed">Try again later.</string>

    <!-- Home -->

    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Sign Up</string>
    <string name="input_error_required">Required.</string>
    <string name="dialog_select_interests_title">Select Interests</string>
    <string name="dialog_select_interests_body">Please select at least 1 interest.</string>
    <string name="button_ok">Ok</string>

    <!-- Overview -->
    <string name="label_transactions">Transactions</string>
    <string name="label_monthly_spending">Monthly Spending</string>
    <string name="label_credit_card_analysis">Credit Card Analysis</string>
    <string name="label_balance">Balance</string>
    <string name="label_spent_this_month">Spent This Month</string>
    <string name="label_today">Today</string>
    <string name="label_yesterday">Yesterday</string>

    <!-- Manage Account -->
    <string name="button_remove_account">Remove</string>
    <string name="button_link_account">Link Account</string>

    <!-- Link Account -->
    <string name="prompt_bank_name">Bank name</string>
    <string name="prompt_account_number">Account number</string>
    <string name="dialog_title_account_link_failed">Couldn\'t link account</string>
    <string name="dialog_message_account_link_failed">Try again later.</string>
    <string name="text_no_linked_accounts">No linked accounts</string>

</resources>
