...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.mattcarroll.androidtesting.overview.AccountsOverviewFragment"
    >

    <TextView
        android:id="@+id/textview_no_accounts"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/text_no_linked_accounts"
        android:visibility="gone"
...
